Added a contact page

--- a/about/index.html
+++ b/about/index.html
@@ -433,6 +433,8 @@ Currently : Living in a quaint harbour-town somewhere in France. Francophone Can
 
 <a href="/setupanduses/">Setup &amp; uses</a>
 
+<a href="/contact/">Contact</a>
+
 
 </nav>
 </header>
