--- a/index.html
+++ b/index.html
@@ -480,10 +480,12 @@ Generated with
 
 
 
+<a href="https://xn--sr8hvo.ws/previous">←</a>
+An <a href="https://xn--sr8hvo.ws">IndieWeb Webring</a> 🕸💍
+<a href="https://xn--sr8hvo.ws/next">→</a>
 
 
-
-🗺️ <a href="/sitemap.xml">Sitemap</a>.
+<a href="https://jpop.dev/" class="h-card" rel="me">jpop</a>
 
 </footer>
 
