--- a/index.html
+++ b/index.html
@@ -465,11 +465,8 @@
 
 
 
-<a href="https://jpop.dev/" class="h-card" rel="me">jpop</a>
 
-
-
-Subscribe via <a href="/index.xml">RSS</a>.
+Subscribe to <a href="https://jpop.dev/" class="h-card" rel="me">jpop</a> via<a href="/index.xml">RSS</a>.
 <br />
 
 
