--- a/setupanduses/index.html
+++ b/setupanduses/index.html
@@ -507,7 +507,7 @@ OS : Fedora KDE 42 Terminal : Konsole 25.8.0 Text editor : Micro Browser : Firef
 
 
 
-Subscribe via <a href="/index.xml">RSS</a>.
+Subscribe to <a href="https://jpop.dev/" class="h-card" rel="me">jpop</a> via <a href="/index.xml">RSS</a>.
 <br />
 
 
@@ -522,10 +522,9 @@ Generated with
 
 
 
-
-
-
-🗺️ <a href="/sitemap.xml">Sitemap</a>.
+<a href="https://xn--sr8hvo.ws/previous">←</a>
+An <a href="https://xn--sr8hvo.ws">IndieWeb Webring</a> 🕸💍
+<a href="https://xn--sr8hvo.ws/next">→</a>
 
 </footer>
 
