--- a/about/index.html
+++ b/about/index.html
@@ -467,7 +467,7 @@ Currently : Living in a quaint harbour-town somewhere in France. Francophone Can
 
 
 
-Subscribe via <a href="/index.xml">RSS</a>.
+Subscribe to <a href="https://jpop.dev/" class="h-card" rel="me">jpop</a> via <a href="/index.xml">RSS</a>.
 <br />
 
 
@@ -482,10 +482,9 @@ Generated with
 
 
 
-
-
-
-🗺️ <a href="/sitemap.xml">Sitemap</a>.
+<a href="https://xn--sr8hvo.ws/previous">←</a>
+An <a href="https://xn--sr8hvo.ws">IndieWeb Webring</a> 🕸💍
+<a href="https://xn--sr8hvo.ws/next">→</a>
 
 </footer>
 
